--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="no">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TANGAN</title>
+  <title>Variasjon</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://min30327.github.io/luxy.js/dist/js/luxy.js"></script>
+  <script src="js/main.js" defer></script>
 </head>
 <body class="body">
   <div id="luxy" class="main_container pt-4vw">
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero_content">
+        <h1 class="outline_text_light">VARI<br>ASJON</h1>
+        <p>Coaching • Podcast • Artikler</p>
+      </div>
+    </section>
+
     <!-- Cursor -->
     <div class="cursor_wrapper">
       <div class="cursor">
