--- a/coaching.html
+++ b/coaching.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Coaching – Variasjon</title>
-  <meta name="description" content="Coaching for nevrovarierte. Finn en coach som forstår ADHD, autisme, sanseregulering og hverdagens utfordringer." />
+  <meta name="description" content="Coaching for nevrovarierte – velg din coach og få et eget rom med oppgaver, videosamtaler og støtte." />
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="theme-oker">
+
 <header class="site-header">
   <div class="container mast">
-    <h1 class="logo">VARIASJON Coaching</h1>
+    <h1 class="logo">COACHING</h1>
     <p class="subtitle">
-      <span class="line">Støtte</span>
       <span class="line">for</span>
       <span class="line">nevrovarierte</span>
     </p>
@@ -25,48 +25,51 @@
     <div class="container row">
       <a class="tab" href="index.html">Hjem</a>
       <a class="tab" href="utgaver.html">Utgaver</a>
+      <a class="tab" href="coaching.html" aria-current="page">Coaching</a>
       <a class="tab" href="om.html">Om</a>
       <a class="tab" href="kontakt.html">Kontakt</a>
-      <a class="tab" href="coaching.html" aria-current="page">Coaching</a>
     </div>
   </nav>
+
   <div class="accent-bar"></div>
 </header>
 
-
 <div class="page-wrap">
-<main class="container">
-
-  <h2>Våre coacher</h2>
-  <p class="lead">Velg en coach og få tilgang til timer, videomøter og oppfølging.</p>
-
-  <div class="grid" style="margin-top:24px">
-
-    <!-- Coach Mai -->
-    <a href="mai.html" class="article" style="text-decoration:none">
+  <main class="container">
+    
+    <article class="article">
       <div class="pad">
-        <h2>Mai</h2>
-        <p class="lead">Coaching for struktur, overveldelse og sanseregulering.</p>
+
+        <h2>Velg din coach</h2>
+        <p class="lead">Du får ditt eget rom – med videosamtaler, oppgaver, artikler og støtte.</p>
+
+        <div class="grid" style="margin-top:24px; gap:32px;">
+
+          <!-- COACH MAI -->
+          <a href="coach-mai.html" class="coach-card" style="text-decoration:none;">
+            <img src="assets/mai.jpg" alt="Coach Mai" class="coach-img">
+            <h3>Mai</h3>
+            <p class="muted">Spesialfelt: ADHD · struktur · hverdagsmestring</p>
+          </a>
+
+          <!-- COACH REIDUN -->
+          <a href="coach-reidun.html" class="coach-card" style="text-decoration:none;">
+            <img src="assets/reidun.jpg" alt="Coach Reidun" class="coach-img">
+            <h3>Reidun</h3>
+            <p class="muted">Spesialfelt: autisme · energiøkonomi · sanseregulering</p>
+          </a>
+
+        </div>
+
       </div>
-    </a>
+    </article>
 
-    <!-- Coach Reidun -->
-    <a href="reidun.html" class="article" style="text-decoration:none">
-      <div class="pad">
-        <h2>Reidun</h2>
-        <p class="lead">Coaching for voksne med ADHD og nevrovariasjon.</p>
-      </div>
-    </a>
-
-  </div>
-
-</main>
+  </main>
 </div>
-
 
 <footer class="site-footer">
   <div class="container foot">
-    <small>© 2025 Variasjon Coaching</small>
+    <small>© 2025 Variasjon</small>
   </div>
 </footer>
 
